kotlin/semlang-parser/src/test/semlang/validatorTests/fail/extendedLiteral6.sem
struct Tweedledee {
  value: Tweedledum
}

struct Tweedledum {
  value: Tweedledee
}

function getSomething(): Tweedledee {
  Tweedledee."Hello"
}
